# westerm

./: Cargo.toml  INSTALL.md  Makefile  README.md  build.sh
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  upload_asset.sh
docs/: escape_support.md  features.md
extra/completions/: westerm.bash  westerm.fish
extra/linux/: Alacritty.desktop  org.westerm.Westerm.appdata.xml
extra/man/: westerm-bindings.5.scd  westerm-msg.1.scd  westerm.1.scd  westerm.5.scd
scripts/: README.md  create-flamegraph.sh
westerm/: Cargo.toml  build.rs
westerm/src/: cli.rs  clipboard.rs  event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
westerm/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
westerm/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  window.rs
westerm/src/input/: keyboard.rs  mod.rs
westerm/src/renderer/: mod.rs  rects.rs
westerm_config/: Cargo.toml
westerm_config/src/: lib.rs
westerm_config_derive/: Cargo.toml
westerm_config_derive/src/: lib.rs  serde_replace.rs
westerm_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
westerm_config_derive/tests/: config.rs
westerm_terminal/: CHANGELOG.md  Cargo.toml
westerm_terminal/src/: event_loop.rs  lib.rs
westerm_terminal/src/grid/: resize.rs
westerm_terminal/src/term/: cell.rs  mod.rs  search.rs
westerm_terminal/tests/: ref.rs
(+9 files in other folders)
